# ajanox

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ajanox-l2-skeleton/: .gitignore  CONTRIBUTING.md  README.md
ajanox-l2-skeleton/.github/workflows/: ci.yml  iso.yml
ajanox-l2-skeleton/apt/: README.md
ajanox-l2-skeleton/branding/: README.md
ajanox-l2-skeleton/docs/: ARCHITECTURE.md  BUILDING.md  DEVELOPMENT.md  ROADMAP.md
ajanox-l2-skeleton/firstrun/: README.md
ajanox-l2-skeleton/gnome-extension/: README.md
ajanox-l2-skeleton/iso/cubic/: README.md
ajanox-l2-skeleton/iso/live-build/: README.md
ajanox-l2-skeleton/iso/preseed/: README.md
ajanox-l2-skeleton/tests/iso-acceptance/: README.md
docs/: ARCHITECTURE.md  DEVELOPER.md  SECURITY.md  SPEC.md  roadmap-v2-v3.md  yolculuk.md
examples/hello-world-skill/: SKILL.md
skills/delete-old-logs/: SKILL.md
skills/find-large-files/: SKILL.md
skills/mac-notification/: SKILL.md
skills/system-info/: SKILL.md
skills/weather/: SKILL.md
skills/zip-folder/: SKILL.md
src/ajanox/: __init__.py
src/ajanox/cli/: __init__.py  __main__.py  shell.py  skill.py  web.py
src/ajanox/core/: __init__.py  agent.py  approval.py  audit.py  compat.py  critical_paths.yml  enforcer.py  (+13 more)
tests/: test_agent_history.py  test_agent_loop.py  test_approval.py  test_audit.py  test_cli_skill.py  test_compat.py  test_enforcer.py  test_matcher.py  test_netfilter.py  test_parser.py  test_permissions.py  test_platform.py  test_primitives.py  test_registry.py  test_sandbox.py  test_signing.py  test_skill_loader.py  test_verifier.py
(+3 files in other folders)
