[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ajanox"
version = "0.3.3"
description = "Türkçe doğal dil komutlarıyla çalışan, ajan tabanlı, açık kaynak işletim sistemi katmanı"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Özal Yıldırım" }]
keywords = ["agent", "llm", "ollama", "skills", "os", "turkish"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Turkish",
    "Natural Language :: English",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
ajanox = "ajanox.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/yildirimozal/ajanox"
Repository = "https://github.com/yildirimozal/ajanox"
Issues = "https://github.com/yildirimozal/ajanox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ajanox"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "ajanox/builtin_skills"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
